# LuzIA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  render.yaml  run_local.ps1
backend/: .dockerignore  .env.example  Dockerfile  GUIA-COMPASS.md  GUIA-DATA-ACCESS.md  GUIA-TESTES.md  Guia-Implementacao-Backend.md  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py
backend/app/bot/: flow.py  parsers.py
backend/app/models/: base.py
backend/app/repositories/: __init__.py  diagnosticos.py  organizacoes.py  questionarios.py  respostas.py  usuarios.py
backend/app/routers/: auth.py  bot.py  diagnosticos.py  organizacoes.py  relatorios.py  respostas.py
backend/app/services/: diagnostico_service.py
backend/mongo/: ModeloConceitual.json  WSL-MongoDB-Setup.md  backup_before_test.sh  cleanup_test_data.js  init.js  init_final.js  init_old.js  migration_copsoq_v2_to_v3.js  migration_user_status_to_v2.js  restore_backup.sh  seed_copsoq_curta_br.js  seed_copsoq_media_pt.js  seed_test_org.js
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: create_indexes.py  get_ngrok_url.sh  run_migrations.py  run_migrations_and_tests.sh  seed_dashboard_reports_demo.py  start_ngrok_secure.sh
backend/src/app/: main.py
backend/tests/: conftest.py  test_auth.py  test_dashboard_twilio_route.py  test_db.py  test_diagnosticos_integration.py  test_logic.py  test_organizacoes_integration.py  test_repositories_integration.py  test_respostas_integration.py  test_routers.py  test_services.py
(+214 files in other folders)
